# nplm

./: .gitignore  ASSIGNMENT.md  LLM_LOG.md  README.md  pyproject.toml
configs/: medium.yaml  tiny.yaml
nplm/: build_word_tokenizer.py  data.py  dev.ipynb  download.py  eval.py  model.py  preprocess.py  test.py  test_install.py  train.py  word_tokenizer.py
results/: EXPERIMENTS.md  metrics.json
